--- a/contact.html
+++ b/contact.html
@@ -21,10 +21,10 @@
 </head>
 
 <body class="relative main">
-    <div class="container">
 
-        <!-- navbar starts -->
-        <header class="z-50 w-full bg-[#f2f2f2] sticky top-0">
+    <!-- navbar starts -->
+    <header class="z-50 w-full bg-[#f2f2f2] sticky top-0">
+        <div class="container">
             <nav class="py-2">
                 <div class="flex justify-between items-center">
                     <!-- Logo and Name -->
@@ -68,69 +68,74 @@
                     </div>
                 </div>
             </nav>
-        </header>
-        <!-- navbar ends -->
+        </div>
+    </header>
+    <!-- navbar ends -->
 
-        <div>
+    <main>
+        <div class="container">
             <div class="grid grid-cols-12 gap-4 py-10">
                 <!-- side pannel -->
-                <div class="rounded-2xl hero col-span-12 h-[450px] md:bg-[#F9FAFB] lg:fixed w-[300px]">
+                <aside class="rounded-2xl hero col-span-12 h-[450px] md:bg-[#F9FAFB] lg:fixed w-[300px]">
                     <div class="relative">
                         <img width="180" class="absolute left-[19%] -top-44 rounded-lg shadow-2xl"
-                            src="/images/hero.webp" alt="Sudam Shrestha">
+                            src="../images/hero.webp" alt="Sudam Shrestha Profile Picture">
                         <h1 class="mt-[150px] text-center mainfont text-2xl">Sudam Shrestha</h1>
-                        <p class="text-center font-sans font-extralight text-sm text-black">FullStack Developer</p>
+                        <p class="text-center font-sans font-extralight text-sm text-black">Full Stack Developer</p>
                         <div class="flex gap-4 pt-4 pl-16">
-                            <a target="_blank" href="https://www.facebook.com/sudam.shrestha.98/">
-                                <img src="/images/facebook.svg" width="25" alt="Facebook">
+                            <a target="_blank" href="https://www.facebook.com/sudam.shrestha.98/" aria-label="Facebook">
+                                <img src="../images/facebook.svg" width="25" alt="Facebook Icon">
                             </a>
-                            <a target="_blank" href="https://wa.me/9704508525">
-                                <img src="/images/whatsapp.svg" width="25" alt="Whatsapp">
+                            <a target="_blank" href="https://wa.me/9704508525" aria-label="WhatsApp">
+                                <img src="../images/whatsapp.svg" width="25" alt="WhatsApp Icon">
                             </a>
-                            <a target="_blank" href="https://github.com/Sudam939">
-                                <img src="/images/github.svg" width="25" alt="Github">
+                            <a target="_blank" href="https://github.com/Sudam939" aria-label="GitHub">
+                                <img src="../images/github.svg" width="25" alt="GitHub Icon">
                             </a>
-                            <a target="_blank" href="https://www.linkedin.com/in/sudam-shrestha-59a15126a">
-                                <img src="/images/linkedin.svg" width="25" alt="Linkedin">
+                            <a target="_blank" href="https://www.linkedin.com/in/sudam-shrestha-59a15126a"
+                                aria-label="LinkedIn">
+                                <img src="../images/linkedin.svg" width="25" alt="LinkedIn Icon">
                             </a>
                         </div>
 
                         <div class="pt-5 pl-8">
                             <div class="flex items-center gap-2 py-2">
-                                <a href="tel:9704508525" class="flex items-center gap-2">
-                                    <img width="18" class="text-white" src="/images/phone.svg" alt="Phone">
+                                <a href="tel:9704508525" class="flex items-center gap-2" aria-label="Phone">
+                                    <img width="18" src="../images/phone.svg" alt="Phone Icon">
                                     <div>
                                         <p class="text-xs text-gray-400">Phone</p>
-                                        <p class="font-semibold text-md">9704508525 </p>
+                                        <p class="font-semibold text-md">9704508525</p>
                                     </div>
                                 </a>
                             </div>
 
                             <div class="flex items-center gap-2">
-                                <a href="mailto:sudamshrestha939@gmail" class="flex items-center gap-2">
-                                    <img width="18" class="text-white" src="/images/envelope.svg" alt="Phone">
+                                <a href="mailto:sudamshrestha939@gmail.com" class="flex items-center gap-2"
+                                    aria-label="Email">
+                                    <img width="18" src="../images/envelope.svg" alt="Email Icon">
                                     <div>
                                         <p class="text-xs text-gray-400">Email</p>
-                                        <p class="font-semibold w-1/2 text-md">sudamshrestha939@gmail</p>
+                                        <p class="font-semibold w-1/2 text-md">sudamshrestha939@gmail.com</p>
                                     </div>
                                 </a>
                             </div>
 
                             <div class="flex items-center gap-2 py-2">
                                 <div class="flex items-center gap-2">
-                                    <img width="18" class="text-white" src="/images/location.svg" alt="Phone">
+                                    <img width="18" src="../images/location.svg" alt="Location Icon">
                                     <div>
                                         <p class="text-xs text-gray-400">Location</p>
-                                        <p class="font-semibold text-md">Dharan, Nepal </p>
+                                        <p class="font-semibold text-md">Dharan, Nepal</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                </aside>
 
 
             </div>
+
             <div class="lg:pl-[400px] -mt-[70px] md:pt-14">
                 <div class="flex items-center justify-center">
                     <div class="p-10 rounded-lg shadow-lg max-w-5xl w-full">
@@ -181,10 +186,17 @@
                     </div>
                 </div>
             </div>
-
         </div>
+    </main>
 
-    </div>
+    <footer class="pt-8">
+        <div class="relative flex justify-center items-center">
+            <div class="absolute top-0 left-0 text-center w-full py-4 text-xs text-gray-600">
+                <p>Designed and Developed by Sudam Shrestha</p>
+            </div>
+        </div>
+    </footer>
+
     <script src="./js/script.js"></script>
 </body>
 
