--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <meta property="og:image" content="https://www.sudamshrestha.com.np/images/hero.webp">
     <meta property="og:url" content="https://www.sudamshrestha.com.np/">
     <meta property="og:type" content="website">
-
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
