--- a/skill.html
+++ b/skill.html
@@ -13,6 +13,8 @@
     <meta property="og:description"
         content="Learn about Sudam Shrestha's technical skills and expertise in web development. From PHP and Laravel to Vue.js and Tailwind CSS, explore the skills that define my approach to building web applications.">
     <meta property="og:url" content="https://www.sudamshrestha.com.np/skill">
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link href="./css/style.css" rel="stylesheet">
     <link href="./css/skill.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
