--- a/project.html
+++ b/project.html
@@ -15,6 +15,15 @@
     <meta property="og:image" content="https://www.sudamshrestha.com.np/images/hero.webp">
     <meta property="og:url" content="https://www.sudamshrestha.com.np/project">
     <meta property="og:type" content="website">
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Portfolio",
+          "name": "Sudam Shrestha",
+          "url": "https://www.sudamshrestha.com.np",
+          "logo": "https://www.sudamshrestha.com.np/images/logo.png",
+        }
+    </script>
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link href="./css/style.css" rel="stylesheet">
