--- a/skill.html
+++ b/skill.html
@@ -13,6 +13,15 @@
     <meta property="og:description"
         content="Learn about Sudam Shrestha's technical skills and expertise in web development. From PHP and Laravel to Vue.js and Tailwind CSS, explore the skills that define my approach to building web applications.">
     <meta property="og:url" content="https://www.sudamshrestha.com.np/skill">
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Portfolio",
+          "name": "Sudam Shrestha",
+          "url": "https://www.sudamshrestha.com.np",
+          "logo": "https://www.sudamshrestha.com.np/images/logo.png",
+        }
+    </script>
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link href="./css/style.css" rel="stylesheet">
@@ -186,7 +195,7 @@
 
 
     <script src="./js/script.js"></script>
-    
+
 </body>
 
 </html>
